--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -92,6 +92,12 @@
               <span >All Projects</span>
             </div>
           </li>
+          <li class="menu-collapsed">
+            <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+              <i class="fa fa-duotone fa-users fa-sharp fa-solid mx-4 fa-lg"></i>
+              <span >Users</span>
+            </div>
+          </li>
           <li  class="menu-collapsed">
             <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
               <i class="fa fa-solid fa-gear mx-4 fa-lg"></i>
