--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,4 +42,12 @@
     justify-content: center;
     font-weight: bold;
   }
-  
+
+  .ss-value-text{
+    font-size: 20px !important;
+    padding: 5px;
+  }
+
+  .ss-value{
+    margin: 3px;
+  }
