--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -53,9 +53,10 @@
           card.innerHTML = `
             <div class="card my-3">
               <div class="card-header text-dark d-flex justify-content-end">
-              <i class="fa fa-solid fa-user mx-2"></i>
-              <i class="fa fa-duotone fa-lock mx-2"></i>
-              <a href="/projects/<%= project.id %>">
+               <a href="projects/<%= project.id %>/adduser" style="color:black;"
+               ><i class="fa fa-solid fa-user-plus mx-2 mt-1"></i></a>
+              <i class="fa fa-duotone fa-lock mx-2 mt-1"></i>
+              <a href="/projects/<%= project.id %>" style="color:black;">
               <i class="fa fa-solid fa-up-right-from-square mx-2"></i>
               </a>
               </div>
