--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -36,9 +36,9 @@
       <div class="col-md-4">
         <div class="card my-3">
           <div class="card-header text-dark d-flex justify-content-end">
-            <i class="fa fa-solid fa-user mx-2 mt-1"></i>
+            <a href="projects/<%= project.id %>/adduser" style="color:black;"><i class="fa fa-solid fa-user-plus mx-2 mt-1"></i></a>
             <i class="fa fa-duotone fa-lock mx-2 mt-1"></i>
-            <a href="/projects/<%= project.id %>">
+            <a href="/projects/<%= project.id %>" style="color:black;">
               <i class="fa fa-solid fa-up-right-from-square mx-2"></i>
             </a>
           </div>
