--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -64,8 +64,7 @@
                 <h5 class="card-title">${name}</h5>
                 <div class="d-flex justify-content-end">
                   <div class="icon-container">
-                    ${username.charAt(0).toUpperCase()}
-                    ${username.split(' ')[1].charAt(0).toUpperCase()}
+                    ${username[0].toUpperCase()}
                   </div>
               </div>
               </div>
