--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,41 +13,161 @@
  *= require_tree .
  *= require_self
  */
- @import 'bootstrap';
- @import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
+@import "bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
 
 //  change btn success of boootstrap
 
 .btn-success {
-    background-color: #56AD56 !important;
-    border: #56AD56 !important;
+  background-color: #56ad56 !important;
+  border: #56ad56 !important;
 }
 
-.active-navitem{
-    // neon blue color text
-    color: #2cb5fa !important;
+.active-navitem {
+  // neon blue color text
+  color: #2cb5fa !important;
 }
 
 .icon-container {
-    background: #A1A4AD;
-    color: #fff;
-    border-radius: 50%;
-    width: 30px;
-    font-size: 12px;
-    height:30px;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: bold;
-  }
+  background: #a1a4ad;
+  color: #fff;
+  border-radius: 50%;
+  width: 30px;
+  font-size: 12px;
+  height: 30px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
 
-  .ss-value-text{
-    font-size: 20px !important;
-    padding: 5px;
-  }
+.ss-value-text {
+  font-size: 20px !important;
+  padding: 5px;
+}
 
-  .ss-value{
-    margin: 3px;
-  }
+.ss-value {
+  margin: 3px;
+}
+
+.task-button {
+  margin-top: 1.7rem;
+  height: 2rem;
+}
+
+.message-btn {
+  border: 1px solid #2c2c2c;
+  border-radius: 5px;
+  background-color: white;
+  padding: 0.3rem 2rem;
+  font-size: 14px;
+  font-weight: 600;
+  color: #2c2c2c;
+}
+
+.message-btn:hover {
+  background-color: #2c2c2c;
+  color: white;
+}
+
+.search-result-value {
+  cursor: pointer;
+  padding: 8px;
+  border-radius: 0 5px;
+  border-bottom: 1px solid #ced4da;
+  border-left: 1px solid #ced4da;
+  border-right: 1px solid #ced4da;
+}
+
+// notification css
+
+.notification {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  padding: 16px;
+  background-color: #333;
+  color: #fff;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+  z-index: 9999;
+  border: 2px solid grey;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  max-width: 300px;
+  overflow: hidden;
+}
+.notification.show {
+  opacity: 1;
+}
+.notification-content {
+  display: flex;
+  align-items: center;
+}
+.notification-message {
+  flex-grow: 1;
+  margin-right: 8px;
+}
+.notification-close {
+  cursor: pointer;
+}
+
+.panel-width {
+  width: 100%;
+}
+
+.search-results {
+  position: absolute;
+  top: 0rem;
+  margin: 2rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  z-index: 9999;
+  max-height: 200px;
+  overflow-y: auto;
+}
+
+.search-results-text {
+  padding: 0.5rem 1rem;
+  border-bottom: 1px solid #ccc;
+  font-size: 14px;
+}
+
+#notificationContainer {
+  position: absolute;
+  top: 10%;
+  right: 32px;
+  width: 300px;
+  max-height: 300px;
+  overflow-y: auto;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+  display: none;
+  z-index: 999999;
+}
+
+#notificationContainer.show {
+  display: block;
+}
+
+#notificationButton {
+  position: relative;
+}
+
+.notification-badge {
+  position: absolute;
+  top: -5px;
+  right: -5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: white;
+  color: white;
+  font-size: 12px;
+}
