--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -46,8 +46,7 @@
             <h5 class="card-title"><%= project.name %></h5>
             <div class="d-flex justify-content-end">
               <div class="icon-container">
-                <%= User.find(project.user_id).username[0] %>
-                <%= User.find(project.user_id).username.split(' ').last[0].upcase %>
+                <%= User.find(project.user_id).username[0].upcase %>
               </div>
             </div>
           </div>
