--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,16 +4,19 @@
     <h2 class="text-center pt-4" style="font-weight: bold;">Sign Up</h2>
     <%= form_with model: @user, url: "/signup" do |form| %>
       <div class="form-group my-3">
-        <%= form.label :"UserName" %>
+        <%= form.label :"UserName (Can be Of Only One Word)" %>
         <%= form.text_field :username, class: "form-control", placeholder: "Enter Your UserName" %>
       </div>
+      <% if @user.errors.has_key?(:username) %>
+        <p class="text-danger"><%= @user.errors[:username].first %></p>
+      <% end %>
       <div class="form-group my-3">
         <%= form.label :"Email" %>
         <%= form.text_field :email, class: "form-control", placeholder: "Enter Your Email" %>
       </div>
       <div class="form-group my-3">
         <%= form.label :"Password" %>
-        <%= form.password_field :password_digest,
+        <%= form.password_field :password,
                               class: "form-control",
                               placeholder: "Enter Your Password" %>
       </div>
