--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -49,17 +49,18 @@
     <div class="d-flex justify-content-between align-items-center flex-wrap p-1 text-white px-lg-2" style="background-color: #256188">
       <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %> </div>
       <div class="mx-3">
-       <div id="notificationContainer" class="container">
-          <!-- Notifications will be dynamically added here -->
+        <div id="notificationContainer" class="container">
+          <% if current_user %>
+            <%= button_to "Mark All as Read", notifications_mark_read_path, method: :post, class: "btn btn-primary", id: "mark-read-button" %>
+            <% current_user.notifications.where(read: false).each do |notification| %>
+                  <li class="list-group-item"><%= notification.message %></li>
+            <% end %>    
+          <% end %>    
         </div>
         <button id="notificationButton" class="btn btn-primary">
           <i class="fas fa-bell"></i>
           <span class="badge bg-danger" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
         </button>
-
-          
-          
-
         <i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
         <%= link_to "/logout", method: :post do %>
           <i class="fa fa-solid fa-right-from-bracket mx-3" style="color:#fff"></i>
