--- a/app/views/partials/_backlog.html.erb
+++ b/app/views/partials/_backlog.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-2" id="backlog" class="panel-width">
+<div class="mx-2 panel" id="backlog" data-panel="backlog" style="width:100%">
   <div class="card h-full" style="background-color: #f1f2f4;">
     <div  class="card-header d-flex flex-row justify-content-between align-items-center">
       <h2>Backlog</h2>
