--- a/app/views/partials/_currentIteration.html.erb
+++ b/app/views/partials/_currentIteration.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-2" id="currentIteration" class="panel-width">
+<div  class="mx-2 panel" id="currentIteration" data-panel="current" style="width:100%">
   <div class="card h-full" style="background-color: #f1f2f4;">
     <div  class="card-header d-flex flex-row justify-content-between align-items-center">
       <h2>Current Iteration</h2>
