--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,3 +1,5 @@
+<%= javascript_include_tag 'project_form' %>
+
 <div class="container my-2">
   <div class="field form-group">
     <label for="project_name">Name</label>
@@ -7,74 +9,3 @@
     <button type="submit" class="btn btn-success" id="create-project-btn">Create Project</button>
   </div>
 </div>
-<script>
-  document.getElementById('create-project-btn').addEventListener('click', function(){
-   const name = document.getElementById('project_name').value;
-
-      console.log(name);
-
-      fetch('/projects', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json',
-          'X-CSRF-Token': document.querySelector('meta[name="csrf-token"]').content
-        },
-        body: JSON.stringify({
-            name: name
-        })
-      })
-      .then(function(response) {
-        if (response.ok) {
-          // Handle the success response
-          console.log('Project created successfully');
-          // clear the input field
-          document.getElementById('project_name').value = '';
-          return response.json();
-        } else {
-          // Handle the error response
-          console.log('Project creation failed');
-        }
-      })
-      .then(function(data) {
-        console.log('Response data:', data.username);
-        let username = data.username;
-          // get button of id modal-close-btn
-          let modalCloseBtn = document.getElementById('modal-close-btn');
-          // now get i tag of modal-close-btn
-          let iTag = modalCloseBtn.getElementsByTagName('i')[0];
-          // now click on i tag
-          iTag.click();
-
-          // get element of id projects-display
-          let projectsDisplay = document.getElementById('projects-display');
-          // create the card element
-          let card = document.createElement('div');
-          card.classList.add('col-md-4');
-          card.innerHTML = `
-            <div class="card my-3">
-              <div class="card-header text-dark d-flex justify-content-end">
-               <a href="projects/<%= project.id %>/adduser" style="color:black;"
-               ><i class="fa fa-solid fa-user-plus mx-2 mt-1"></i></a>
-              <i class="fa fa-duotone fa-lock mx-2 mt-1"></i>
-              <a href="/projects/<%= project.id %>" style="color:black;">
-              <i class="fa fa-solid fa-up-right-from-square mx-2"></i>
-              </a>
-              </div>
-              <div class="card-body">
-                <h5 class="card-title">${name}</h5>
-                <div class="d-flex justify-content-end">
-                  <div class="icon-container">
-                    ${username[0].toUpperCase()}
-                  </div>
-              </div>
-              </div>
-            </div>
-          `;
-        // append the card to the projects-display element
-        projectsDisplay.appendChild(card);
-      })
-      .catch(function(error) {
-        console.log(error);
-      });
-  });
-</script>
