--- a/app/views/projects/adduser.html.erb
+++ b/app/views/projects/adduser.html.erb
@@ -1,3 +1,4 @@
+<%= javascript_include_tag 'project' %>
 <div class="d-flex justify-content-between align-items-center flex-wrap p-1 text-white px-lg-2" style="background-color: #256188">
   <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-sharp fa-light fa-gears mx-2"></i> ProjectTracker </div>
   <div><i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
@@ -23,18 +24,4 @@
     </div>
   <% end %>
 </div>
-<script>
-  var projectId = getProjectIdFromUrl();
-  document.getElementById('project-id-field').value = projectId;
-  document.getElementById('project-id').innerHTML = projectId
 
-  function getProjectIdFromUrl() {
-  var url = window.location.href;
-  var regex = /projects\/(\d+)/;
-  var match = url.match(regex);
-  if (match && match.length > 1) {
-    return match[1];
-  }
-  return null;
-    }
-</script>
