--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,156 +1,95 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>ProjectManagementTool</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application' %>
-    <script src="https://kit.fontawesome.com/b199d9add5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-Pf0Y1E96dov4i6j5T58Ij9pbl8rr/RlULzUqoHuw8FmYmlsUZG9LHTzpv4XJ+k5K" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css" integrity="sha384-pzj7v5IQWIOv8ZyGf8+7odk87gTw8TLP9K/D9K+dz9OPD2B3tEFC0ZpzomI4gVxY" crossorigin="anonymous">
-    <style>
-      *{
-      font-family: 'Raleway', sans-serif;
-      }
-      #body-row {
-      margin-left:0;
-      margin-right:0;
-      }
-      #sidebar-container {
-          min-height: 97vh;
-          background-color: #2F3337;
-          padding: 0;
-      }
-      .sidebar-expanded {
-          width: 230px;
-      }
-      .sidebar-collapsed {
-          overflow: hidden;
-          width: 65px;
-          transition: 0.2s ease-in-out;
-      }
-      #sidebar-container .list-group .sidebar-submenu a {
-          height: 45px;
-          padding-left: 30px;
-      }
-      .sidebar-submenu {
-          font-size: 0.9rem;
-      }
-      .menu-collapsed {
-         cursor: pointer;
-      }
-    </style>
-  </head>
-  <body>
-  <div id="toast-container" class="toast-container"></div>
-    <div class="d-flex justify-content-between align-items-center flex-wrap p-1 text-white px-lg-2" style="background-color: #256188">
-      <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %> </div>
-      <div class="mx-3">
-        <div id="notificationContainer" class="container">
-          <% if current_user %>
-            <%= button_to "Mark All as Read", notifications_mark_read_path, method: :post, class: "btn btn-primary", id: "mark-read-button" %>
-            <% current_user.notifications.where(read: false).each do |notification| %>
-                  <li class="list-group-item"><%= notification.message %></li>
-            <% end %>    
-          <% end %>    
-        </div>
-        <button id="notificationButton" class="btn btn-primary">
-          <i class="fas fa-bell"></i>
-          <span class="badge bg-danger" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
-        </button>
-        <i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
-        <%= link_to "/logout", method: :post do %>
-          <i class="fa fa-solid fa-right-from-bracket mx-3" style="color:#fff"></i>
+<%= javascript_include_tag 'detail_form' %>
+<%= javascript_include_tag 'detail' %>
+<div id="toast-container" class="toast-container"></div>
+<div class="d-flex justify-content-between align-items-center flex-wrap p-1 py-2 text-white px-lg-2" style="background-color: #256188">
+  <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %> </div>
+  <div class="mx-3 d-flex flex-row justify-content-center align-item-center">
+    <%= form_for :search_items, url: search_items_path, method: :get, html: { class: "form-inline mx-5" } do |form| %>
+      <%= form.hidden_field :project_id, value: @project.id %>
+      <%= form.text_field :query, value: params[:search_items].presence && params[:search_items][:query], placeholder: "Search Field", class: "form-control" %>
+    <% end %>
+    <button id="notificationButton" class="btn btn-blue">
+      <i class="fas fa-bell fa-xl"></i>
+      <span class="badge bg-danger noti-icon" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
+    </button>
+    <div id="notificationContainer" class="container py-1 mx-5">
+      <% if current_user %>
+        <%= link_to "Mark All Read", notifications_mark_read_path, method: :post, class: "btn btn-success w-50 mx-auto d-block", id: "mark-read-button" %>
+        <% current_user.notifications.where(read: false).each do |notification| %>
+          <li class="list-group-item"><%= notification.message %></li>
         <% end %>
-      </div>
+      <% end %>
     </div>
-    <div class="row" id="body-row" style="background-color: #212123;">
-      <div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
-        <ul class="list-group">
-          <li class="my-3 mx-3">
-            <div class="d-flex w-100 justify-content-start align-items-center" id="sidebar-toggle">
-              <svg style="fill: white; cursor: pointer;" width="30" height="30" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 18h13v-2H3v2zm0-5h10v-2H3v2zm0-7v2h13V6H3zm18 9.59L17.42 12 21 8.41 19.59 7l-5 5 5 5L21 15.59z"></path></svg>
-            </div>
-          </li>
-          <hr style="background-color: white; margin: 0px">
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="currentIteration-show">
-              <i class="fa fa-solid fa-list mx-4 fa-lg"></i>
-              <span >Current Iteration</span>
-            </div>
-          </li>
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="icebox-show">
-              <i class="fa fa-duotone fa-snowflake mx-4 fa-lg"></i>
-              <span>Icebox</span>
-            </div>
-          </li>
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="backlog-show">
-              <i class="fa fa-solid fa-triangle-exclamation mx-4 fa-lg"></i>
-              <span >Backlog</span>
-            </div>
-          </li>
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-              <i class="fa fa-sharp fa-regular fa-user mx-4 fa-lg"></i>
-              <span>Profile</span>
-            </div>
-          </li>
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-              <i class="fa fa-sharp fa-solid fa-folder-open mx-4 fa-lg"></i>
-              <span >All Projects</span>
-            </div>
-          </li>
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-              <i class="fa fa-duotone fa-users fa-sharp fa-solid mx-4 fa-lg"></i>
-              <span >Users</span>
-            </div>
-          </li>
-          <li  class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-              <i class="fa fa-solid fa-gear mx-4 fa-lg"></i>
-              <span>Settings</span>
-            </div>
-          </li>
-          <li class="menu-collapsed">
-            <div class="d-flex w-100 justify-content-start align-items-center text-white my-4" onClick="window.location.href='/logout'">
-              <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
-              <span> Logout </span>
-            </div>
-          </li>
-        </ul>
-      </div>
-      <div class="col">
-        <div class="d-flex flex-row w-100 h-100">
-          <%= render partial: "partials/backlog" %>
-          <%= render partial: "partials/icebox"%>
-          <%= render partial: "partials/currentIteration" %>
+    <i class="fa fa-solid fa-user mt-3 mx-3 fa-xl"></i> <span class="mt-2"><%= current_user.username %></span>
+    <%= link_to "/logout", method: :post do %>
+      <i class="fa fa-solid fa-right-from-bracket mt-3 mx-3 fa-xl" style="color:#fff"></i>
+    <% end %>
+  </div>
+</div>
+<div class="row" id="body-row" style="background-color: #212123;">
+  <div id="sidebar-container" class="sidebar-expanded d-none d-md-block">
+    <ul class="list-group">
+      <li class="my-3 mx-3">
+        <div class="d-flex w-100 justify-content-start align-items-center" id="sidebar-toggle">
+          <svg style="fill: white; cursor: pointer;" width="30" height="30" focusable="false" viewBox="0 0 24 24" aria-hidden="true"><path d="M3 18h13v-2H3v2zm0-5h10v-2H3v2zm0-7v2h13V6H3zm18 9.59L17.42 12 21 8.41 19.59 7l-5 5 5 5L21 15.59z"></path></svg>
         </div>
-      </div>
-      <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+      </li>
+      <hr style="background-color: white; margin: 0px">
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="currentIteration-show">
+          <i class="fa fa-solid fa-list mx-4 fa-lg"></i>
+          <span >Current Iteration</span>
+        </div>
+      </li>
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="icebox-show">
+          <i class="fa fa-duotone fa-snowflake mx-4 fa-lg"></i>
+          <span>Icebox</span>
+        </div>
+      </li>
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="backlog-show">
+          <i class="fa fa-solid fa-triangle-exclamation mx-4 fa-lg"></i>
+          <span >Backlog</span>
+        </div>
+      </li>
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+          <i class="fa fa-sharp fa-regular fa-user mx-4 fa-lg"></i>
+          <span>Profile</span>
+        </div>
+      </li>
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+          <i class="fa fa-sharp fa-solid fa-folder-open mx-4 fa-lg"></i>
+          <span >All Projects</span>
+        </div>
+      </li>
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+          <i class="fa fa-duotone fa-users fa-sharp fa-solid mx-4 fa-lg"></i>
+          <span >Users</span>
+        </div>
+      </li>
+      <li  class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
+          <i class="fa fa-solid fa-gear mx-4 fa-lg"></i>
+          <span>Settings</span>
+        </div>
+      </li>
+      <li class="menu-collapsed">
+        <div class="d-flex w-100 justify-content-start align-items-center text-white my-4" onClick="window.location.href='/logout'">
+          <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
+          <span> Logout </span>
+        </div>
+      </li>
+    </ul>
+  </div>
+  <div class="col">
+    <div class="d-flex flex-row w-100 h-100">
+      <%= render partial: "partials/backlog" %>
+      <%= render partial: "partials/icebox"%>
+      <%= render partial: "partials/currentIteration" %>
     </div>
-  </body>
-  <script>
-    $(document).ready(function() {
-
-      const notificationContainer = document.getElementById("notificationContainer");
-      const notificationButton = document.getElementById("notificationButton");
-      let isOpen = false;
-
-      notificationButton.addEventListener("click", () => {
-        isOpen = !isOpen;
-        toggleNotificationContainer();
-      });
-
-      function toggleNotificationContainer() {
-        notificationContainer.classList.toggle("show");
-      }
-    });
-  </script>
-</html>
+  </div>
+</div>
