feat/test changes

--- a/app/views/partials/_icebox.html.erb
+++ b/app/views/partials/_icebox.html.erb
@@ -1,4 +1,4 @@
-<div class="mx-2 panel" id="icebox" data-panel="icebox" style="width:100%">
+<div class="mx-1 mb-2 panel" id="icebox" data-panel="icebox" style="width:100%">
   <div class="card h-full" style="background-color: #f1f2f4;">
     <div  class="card-header d-flex flex-row justify-content-between align-items-center">
       <h2>Icebox</h2>
