--- a/app/views/details/elastic_search.html.erb
+++ b/app/views/details/elastic_search.html.erb
@@ -94,7 +94,7 @@
       <% if params[:search_items].present? && @details.empty? %>
         <h2 class="text-center">No items found matching your query.</h2>
       <% elsif @details.present? %>
-        <div class="mx-2" id="search"style="width:33%">
+        <div class="mx-2 w-50" id="search">
           <div class="card h-full" style="background-color: #f1f2f4;">
             <div  class="card-header d-flex flex-row justify-content-between align-items-center">
               <h2>Search Results</h2>
