--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -34,7 +34,7 @@
 <div class="container">
   <h3 class="text-center mt-4">All Projects</h3>
   <div class="row mb-3" id="projects-display">
-    <% @projects.each do |project| %>
+    <% @projects.order(id: :desc).each do |project| %>
       <div class="col-md-4">
         <div class="card my-3">
           <div class="card-header text-dark d-flex justify-content-end">
