--- a/app/views/partials/_backlog.html.erb
+++ b/app/views/partials/_backlog.html.erb
@@ -6,7 +6,7 @@
         <div class="accordion text-dark" id="accordionExample">
           <div>
             <div id="headingOne<%= @backlog_item_submit %>">
-              <button class="collapsed btn text-white" style="background-color: #256188" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne<%= @backlog_item_submit %>" aria-expanded="true" aria-controls="collapseOne<%= @backlog_item_submit %>">  <i class="fa-solid fa-plus mx-2"></i>  Add Feature </button>
+              <button class="collapsed btn text-white submit-button" data-submit-id="<%= @backlog_item_submit %>" style="background-color: #256188" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne<%= @backlog_item_submit %>" aria-expanded="true" aria-controls="collapseOne<%= @backlog_item_submit %>">  <i class="fa-solid fa-plus mx-2"></i>  Add Feature </button>
             </div>
           </div>
         </div>
