--- a/app/views/partials/_currentIteration.html.erb
+++ b/app/views/partials/_currentIteration.html.erb
@@ -6,7 +6,7 @@
         <div class="accordion text-dark" id="accordionExample">
           <div>
             <div id="headingOne<%= @current_item_submit %>">
-              <button class="collapsed btn text-white" style="background-color: #256188"
+              <button class="collapsed btn text-white submit-button" style="background-color: #256188" data-submit-id="<%= @current_item_submit %>"
           type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne<%= @current_item_submit %>" aria-expanded="true" aria-controls="collapseOne<%= @current_item_submit %>">  <i class="fa-solid fa-plus mx-2"></i> Add Feature </button>
             </div>
           </div>
