--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,5 +1,5 @@
-<%= javascript_include_tag 'detail_form' %>
-<%= javascript_include_tag 'detail' %>
+<%= javascript_include_tag 'packs/detail_form' %>
+<%= javascript_include_tag 'packs/detail' %>
 <div id="toast-container" class="toast-container"></div>
 <div class="d-flex justify-content-between align-items-center flex-wrap p-1 py-2 text-white px-lg-2" style="background-color: #256188">
   <a href="/" style="text-decoration:none; color: white">
