--- a/app/views/details/elastic_search.html.erb
+++ b/app/views/details/elastic_search.html.erb
@@ -1,8 +1,12 @@
-<%= javascript_include_tag 'detail_form' %>
-<%= javascript_include_tag 'detail' %>
+<%= javascript_include_tag 'packs/detail_form' %>
+<%= javascript_include_tag 'packs/detail' %>
 <div id="toast-container" class="toast-container"></div>
 <div class="d-flex justify-content-between align-items-center flex-wrap p-1 py-2 text-white px-lg-2" style="background-color: #256188">
-  <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %> </div>
+  <div>
+    <%= link_to project_path(@project.id) do %>
+      <div class="btn btn-success">Go Back</div>
+    <% end %>
+  </div>
   <div class="mx-3 d-flex flex-row justify-content-center align-item-center">
     <%= form_for :search_items, url: search_items_path, method: :get, html: { class: "form-inline mx-5" } do |form| %>
       <%= form.hidden_field :project_id, value: @project.id %>
@@ -53,7 +57,7 @@
           <span >Backlog</span>
         </div>
       </li>
-        <%#li class="menu-collapsed">
+      <%#li class="menu-collapsed">
         <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
           <i class="fa fa-sharp fa-regular fa-user mx-4 fa-lg"></i>
           <span>Profile</span>
@@ -92,7 +96,7 @@
   <div class="col">
     <% unless @details.nil? %>
       <% if params[:search_items].present? && @details.empty? %>
-        <h2 class="text-center">No items found matching your query.</h2>
+        <h2 class="text-center text-white py-5">No items found matching your query.</h2>
       <% elsif @details.present? %>
         <div class="mx-2 w-50" id="search">
           <div class="card h-full" style="background-color: #f1f2f4;">
