--- a/app/views/partials/_detail.html.erb
+++ b/app/views/partials/_detail.html.erb
@@ -43,11 +43,11 @@
     <div class="d-flex flex-column  flex-wrap">
       <div id="user-container<%= item.id %>">
         <% item.users.each do |user| %>
-          <p><%= user.email %></p>
+          <p><%= user.username %></p>
         <% end %>
       </div>
       <%= form_tag(update_user_ids_project_detail_path(item.project_id, item.id ), method: :post, remote: true) do %>
-        <input type="text"  name="email[]" id="search-input<%= item.id %>" class="form-control" placeholder="Type to search..." />
+        <input type="text"  name="username[]" id="search-input<%= item.id %>" class="form-control" placeholder="Type to search..." />
         <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
         <div id="search-results<%= item.id %>"></div>
         <%= submit_tag 'Add User', class: 'message-btn mt-3' %>
