--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,8 +1,8 @@
-<%= javascript_include_tag 'project_form' %>
+<%= javascript_include_tag 'packs/project_form' %>
 
 <div class="container my-2">
   <div class="field form-group">
-    <label for="project_name">Name</label>
+    <label for="project_name" class="required">Name</label>
     <input type="text" id="project_name" class="form-control" name="project[name]">
   </div>
   <div class="actions d-flex justify-content-center my-3">
