--- a/app/views/projects/adduser.html.erb
+++ b/app/views/projects/adduser.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_include_tag 'project' %>
+<%= javascript_include_tag 'packs/project' %>
 <div class="d-flex justify-content-between align-items-center flex-wrap p-1 text-white px-lg-2" style="background-color: #256188">
   <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-sharp fa-light fa-gears mx-2"></i> ProjectTracker </div>
   <div><i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
