--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -40,11 +40,11 @@
           <div class="card-header text-dark d-flex justify-content-end">
             <a href="projects/<%= project.id %>/adduser" style="color:black;"><i class="fa fa-solid fa-user-plus mx-2 mt-1"></i></a>
             <i class="fa fa-duotone fa-lock mx-2 mt-1"></i>
-            <a href="/projects/<%= project.id %>" style="color:black;">
+            <a href="/projects/<%= project.id %>" target="_blank" style="color:black;">
               <i class="fa fa-solid fa-up-right-from-square mx-2"></i>
             </a>
           </div>
-          <a href="/projects/<%= project.id %>" style="cursor:pointer;">
+          <a href="/projects/<%= project.id %>" target="_blank" style="cursor:pointer;">
             <div class="card-body">
               <h5 class="card-title text-dark"><%= project.name %></h5>
               <div class="d-flex justify-content-end">
