--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,24 +4,24 @@
     <h2 class="text-center pt-4" style="font-weight: bold;">Sign Up</h2>
     <%= form_with model: @user, url: "/signup" do |form| %>
       <div class="form-group my-3">
-        <%= form.label :"UserName (Can be Of Only One Word)" %>
+        <%= form.label :"UserName (Can be Of Only One Word)", class: "required" %>
         <%= form.text_field :username, class: "form-control", placeholder: "Enter Your UserName" %>
         <p class="text-danger"><%= error_messages(@user, :username) %></p>
       </div>
       <div class="form-group my-3">
-        <%= form.label :"Email" %>
+        <%= form.label :"Email", class: "required" %>
         <%= form.text_field :email, class: "form-control", placeholder: "Enter Your Email" %>
         <p  class="text-danger"><%= error_messages(@user, :email) %></p>
       </div>
       <div class="form-group my-3">
-        <%= form.label :"Password" %>
+        <%= form.label :"Password", class: "required" %>
         <%= form.password_field :password,
                               class: "form-control",
                               placeholder: "Enter Your Password" %>
         <p  class="text-danger"><%= error_messages(@user, :password) %></p>
       </div>
       <div class="form-group my-3">
-        <%= form.label :"Confirm Password" %>
+        <%= form.label :"Confirm Password", class: "required" %>
         <%= form.password_field :password_confirmation,
                               class: "form-control",
                               placeholder: "Confirm Your Password" %>
@@ -45,4 +45,5 @@
       <span class="text-center text-sm px-5 text-muted">Sign up with Google</span>
     </button>
   <% end %>
+  <div class="text-center text-uppercase py-3" style="font-weight:semibold; font-size:13px" > Already have an account? <%= link_to "Sign In", "/",  class: "text-decoration-none" %> </div>
 </div>
