--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -18,7 +18,7 @@
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Add a New Project</h5>
           <button style="border: none;background: transparent;" id="modal-close-btn">
             <i class="fa fa-sharp fa-light fa-circle-xmark fa-xl"
               data-dismiss="modal" aria-label="Close" style="color: #ff4d4d;"></i>
