--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -48,7 +48,7 @@
       <li class="menu-collapsed">
         <div class="d-flex w-100 justify-content-start align-items-center active-navitem my-3 text-white" id="currentIteration-show">
           <i class="fa fa-solid fa-list mx-4 fa-lg"></i>
-          <span >Current Iteration</span>
+          <span >Iteration</span>
         </div>
       </li>
       <li class="menu-collapsed">
