--- a/app/views/partials/_currentIteration.html.erb
+++ b/app/views/partials/_currentIteration.html.erb
@@ -1,7 +1,7 @@
 <div  class="mx-1 mb-2 panel" id="currentIteration" data-panel="current" style="width:100%">
   <div class="card h-full" style="background-color: #f1f2f4;">
     <div  class="card-header d-flex flex-row justify-content-between align-items-center">
-      <h2>Current Iteration</h2>
+      <h2>Iteration</h2>
       <div class="d-flex flex-row justify-content-between align-items-center">
         <div class="accordion text-dark" id="accordionExample">
           <div>
