--- a/app/views/user_mailer/notification_email.text.erb
+++ b/app/views/user_mailer/notification_email.text.erb
@@ -1,1 +1,45 @@
-<p>A new comment has been added to feature <%= @details_id %></p>
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        .header {
+            background-color: #f0f0f0;
+            text-align: center;
+            padding: 20px;
+        }
+        .logo {
+            width: 100px;
+            height: auto;
+        }
+        .content {
+            padding: 20px;
+        }
+        .footer {
+            background-color: #f0f0f0;
+            text-align: center;
+            padding: 10px 0;
+            font-size: 14px;
+            color: #666;
+        }
+    </style>
+</head>
+<body>
+    <div class="header">
+        <img class="logo" src="https://www.linkpicture.com/q/logo_22.png" alt="Logo">
+    </div>
+    <div class="content">
+        <p>Hello, <strong><%= @username %></strong></p>
+        <p>A new comment has been added to the following feature:</p>
+        <p>Title: <strong><%= @details_title %></strong></p>
+        <p>Description: <strong><%= @details_description %></strong></p>
+        <p>Thank you for Contribution!</p>
+    </div>
+    <div class="footer">
+        <p>Regards,</p>
+        <p><%= @creator_email %></p>
+    </div>
+</body>
+</html>
