--- a/app/views/details/elastic_search.html.erb
+++ b/app/views/details/elastic_search.html.erb
@@ -14,18 +14,18 @@
     <% end %>
     <button id="notificationButton" class="btn btn-blue">
       <i class="fas fa-bell fa-xl"></i>
-      <span class="badge bg-danger noti-icon" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
+      <span class="badge bg-danger noti-icon displayNone" id="notificationCounter"><%= current_user.notifications.where(read: false).count%></span>
     </button>
     <div id="notificationContainer" class="container py-1 mx-5">
       <% if current_user %>
-        <%= link_to "Mark All Read", notifications_mark_read_path, method: :post, class: "btn btn-success w-50 mx-auto d-block", id: "mark-read-button" %>
         <% current_user.notifications.where(read: false).each do |notification| %>
           <li class="list-group-item"><%= notification.message %></li>
         <% end %>
+        <button class="btn btn-success w-50 mx-auto d-block my-3" id="mark-read-button">Mark All Read</button>
       <% end %>
     </div>
     <i class="fa fa-solid fa-user mt-3 mx-3 fa-xl"></i> <span class="mt-2"><%= current_user.username %></span>
-    <%= link_to "/logout", method: :post do %>
+    <%= link_to logout_path, method: :post do %>
       <i class="fa fa-solid fa-right-from-bracket mt-3 mx-3 fa-xl" style="color:#fff"></i>
     <% end %>
   </div>
@@ -57,12 +57,6 @@
           <span >Backlog</span>
         </div>
       </li>
-      <%#li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-          <i class="fa fa-sharp fa-regular fa-user mx-4 fa-lg"></i>
-          <span>Profile</span>
-        </div>
-      </li%>
       <%= link_to projects_path do %>
         <li class="menu-collapsed">
           <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
@@ -79,17 +73,15 @@
           </div>
         </li>
       <% end %>
-      <%#li  class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-          <i class="fa fa-solid fa-gear mx-4 fa-lg"></i>
-          <span>Settings</span>
-        </div>
-      </li%>
       <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-4" onClick="window.location.href='/logout'">
-          <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
-          <span> Logout </span>
-        </div>
+        <%= link_to logout_path, class: "text-white", method: :post do %>
+          <div class="d-flex w-100 justify-content-start align-items-center text-white my-4" >
+            <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
+            <span>
+              Logout
+            </span>
+          </div>
+        <% end %>
       </li>
     </ul>
   </div>
