--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -3,14 +3,13 @@
     <div class="text-center" style="font-weight:bold; font-size: 20px" ><i class="fa fa-sharp fa-light fa-gears mx-2"></i> ProjectTracker </div>
   <% end %>
   <div><i class="fa fa-solid fa-user mx-2"></i> <%= current_user.username %>
-    <%= link_to "/logout", method: :post do %>
+    <%= link_to logout_path, method: :post do %>
       <i class="fa fa-solid fa-right-from-bracket mx-3" style="color:#fff"></i>
     <% end %>
   </div>
 </div>
 <nav class="d-flex justify-content-around align-items-center bg-white flex-wrap p-3">
   <div class="text-center" style="font-weight:semibold; font-size: 20px" >Projects </div>
-  <!-- Button trigger modal -->
   <button type="button" class="btn btn-success" data-toggle="modal" data-target="#exampleModalCenter">
     <i class="fa-solid fa-plus"></i> Create Project
   </button>
@@ -38,7 +37,7 @@
       <div class="col-md-4">
         <div class="card my-3">
           <div class="card-header text-dark d-flex justify-content-end">
-            <a href="projects/<%= project.id %>/adduser" style="color:black;"><i class="fa fa-solid fa-user-plus mx-2 mt-1"></i></a>
+            <a href="/projects/<%= project.id %>/adduser" style="color:black;"><i class="fa fa-solid fa-user-plus mx-2 mt-1"></i></a>
             <i class="fa fa-duotone fa-lock mx-2 mt-1"></i>
             <a href="/projects/<%= project.id %>" target="_blank" style="color:black;">
               <i class="fa fa-solid fa-up-right-from-square mx-2"></i>
