--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -6,7 +6,6 @@
     <div class="text-center" style="font-weight:bold; font-size: 20px"><i class="fa fa-duotone fa-gear mx-2"></i><%= @project.name %></div>
   </a>
   <div class="mx-3 d-flex flex-wrap justify-content-center align-items-center">
-    <!-- Search Form -->
     <div class="d-flex">
       <%= form_for :search_items, url: search_items_path, method: :get, html: { class: "form-inline mx-2 my-2 my-lg-0" } do |form| %>
         <%= form.hidden_field :project_id, value: @project.id %>
@@ -14,24 +13,22 @@
       <% end %>
       <button id="notificationButton" class="btn btn-blue my-2 my-lg-0 mx-2">
         <i class="fas fa-bell fa-xl"></i>
-        <span class="badge bg-danger noti-icon" id="notificationCounter"><%= current_user.notifications.where(read: false).count %></span>
+        <span class="badge bg-danger noti-icon displayNone" id="notificationCounter"><%= current_user.notifications.where(read: false).count %></span>
       </button>
     </div>
-    <!-- User Info and Logout -->
     <div class="mx-3 d-flex flex-wrap justify-content-center align-items-center">
       <i class="fa fa-solid fa-user mx-3 fa-xl"></i>
       <span><%= current_user.username %></span>
-      <%= link_to "/logout", method: :post do %>
+      <%= link_to logout_path, method: :post do %>
         <i class="fa fa-solid fa-right-from-bracket mt-3 mx-3 fa-xl" style="color:#fff"></i>
       <% end %>
     </div>
-    <!-- Notification Dropdown -->
     <div id="notificationContainer" class="container my-2 mx-3">
       <% if current_user %>
         <% current_user.notifications.where(read: false).order(id: :desc).each do |notification| %>
           <li class="list-group-item"><%= notification.message %></li>
         <% end %>
-        <%= link_to "Mark All Read", notifications_mark_read_path, method: :post, class: "btn btn-success w-50 my-2 mx-auto d-block", id: "mark-read-button" %>
+        <button class="btn btn-success w-50 mx-auto d-block my-3" id="mark-read-button">Mark All Read</button>
       <% end %>
     </div>
   </div>
@@ -63,12 +60,6 @@
           <span >Backlog</span>
         </div>
       </li>
-      <%#li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-          <i class="fa fa-sharp fa-regular fa-user mx-4 fa-lg"></i>
-          <span>Profile</span>
-        </div>
-      </li%>
       <%= link_to projects_path do %>
         <li class="menu-collapsed">
           <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
@@ -85,17 +76,15 @@
           </div>
         </li>
       <% end %>
-      <%#li  class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-3">
-          <i class="fa fa-solid fa-gear mx-4 fa-lg"></i>
-          <span>Settings</span>
-        </div>
-      </li%>
       <li class="menu-collapsed">
-        <div class="d-flex w-100 justify-content-start align-items-center text-white my-4" onClick="window.location.href='/logout'">
-          <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
-          <span> Logout </span>
-        </div>
+        <%= link_to logout_path, class: "text-white", method: :post do %>
+          <div class="d-flex w-100 justify-content-start align-items-center text-white my-4">
+            <i class="fa fa-solid fa-sign-out mx-4 fa-lg"></i>
+            <span>
+              Logout            
+            </span>
+          </div>
+        <% end %>
       </li>
     </ul>
   </div>
